--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     compile "de.mpicbg.scicomp:krangl:0.8-SNAPSHOT"
     compile 'org.nield:kotlin-statistics:1.0.0'
+    compile 'com.github.holgerbrandl:kscript-annotations:1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile "io.kotlintest:kotlintest:1.1.6"
